k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-test-app-service
  labels:
    app: simple-test-app
spec:
  selector:
    app: simple-test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
